# mangadex-dl

./: .gitignore  Cargo.toml  README.md
mangadex-dl/: Cargo.toml
mangadex-dl/src/: lib.rs  response_schema.rs
src/: main.rs  mangadex_feed.rs
src/api/: athome_server.rs  mangadex_feed.rs  mod.rs
src/utils/: download_resource.rs  mod.rs  path.rs
