[package]
name = "mangadex-dl-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
reqwest-middleware = "0.2.1"
http-cache-reqwest = "0.9.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
indicatif = "0.17.3"
